fastapi-deployment.yaml
# fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: standard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: max***DFHfgdfghRTY***20/kubernetes-*DSG***Dfsgsdfgdg***_fastapi:latest
          ports:
            - containerPort: 5000
---
# fastapi-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: fastapi
# spec:
#   type: NodePort
#   ports:
#     - port: 5000
#       targetPort: 5000
#   selector:
#     app: fastapi
