postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: standard
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data


# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: postgres
#   namespace: standard
# spec:
#   serviceName: postgres
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgres
#   template:
#     metadata:
#       labels:
#         app: postgres
#     spec:
#       containers:
#         - name: postgres
#           image: postgres:14
#           env:
#             - name: POSTGRES_DB
#               valueFrom:
#                 configMapKeyRef:
#                   name: postgres-config
#                   key: POSTGRES_DB
#             - name: POSTGRES_USER
#               valueFrom:
#                 configMapKeyRef:
#                   name: postgres-config
#                   key: POSTGRES_USER
#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: postgres-secret
#                   key: password
#           ports:
#             - containerPort: 5432
#           volumeMounts:
#             - name: postgres-data
#               mountPath: /var/lib/postgresql/data
#       volumes:
#         - name: postgres-data
#           persistentVolumeClaim:
#             claimName: postgres-data
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres
# spec:
#   ports:
#     - port: 5432
#   clusterIP: None # Headless for StatefulSet
#   selector:
#     app: postgres


#  Config for Mysql
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: db
#   namespace: standard
# spec:
#   serviceName: db
#   replicas: 1
#   selector:
#     matchLabels:
#       app: db
#   template:
#     metadata:
#       labels:
#         app: db
#     spec:
#       containers:
#         - name: db
#           image: mysql:8.0
#           env:
#             - name: MYSQL_ROOT_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: mysql-secret
#                   key: password
#             - name: MYSQL_DATABASE
#               value: "storedb"
#             - name: MYSQL_USER
#               valueFrom:
#                 secretKeyRef:
#                   name: mysql-secret
#                   key: user
#             - name: MYSQL_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: mysql-secret
#                   key: user-password
#           ports:
#             - containerPort: 3306
#           volumeMounts:
#             - name: mysql-data
#               mountPath: /var/lib/mysql
#       volumes:
#         - name: mysql-data
#           persistentVolumeClaim:
#             claimName: mysql-data
