postgress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: standard
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
